feat: Add basic GET /v1/post endpoint
