# api/src/epa_api/apis/posts_api.py
@@ -25,9 +25,9 @@ from fastapi import (  # noqa: F401
 from epa_api.models.extra_models import TokenModel  # noqa: F401
 from datetime import datetime
 from pydantic import Field, StrictStr
-from typing import List, Optional
+from typing import Optional
 from typing_extensions import Annotated
-from epa_api.models.post import Post
+from epa_api.models.post_list import PostList
 
 
 router = APIRouter()
@@ -40,19 +40,20 @@ for _, name, _ in pkgutil.iter_modules(ns_pkg.__path__, ns_pkg.__name__ + "."):
 @router.get(
     "/v1/post",
     responses={
-        200: {"model": List[Post], "description": "A list of posts."},
+        200: {"model": PostList, "description": "A list of posts."},
     },
     tags=["Posts"],
     summary="Retrieve posts",
     response_model_by_alias=True,
 )
 async def get_posts(
+    page_num: Annotated[Optional[StrictStr], Field(description="Start at a specfic page number (if not given, this is always 1)")] = Query(None, description="Start at a specfic page number (if not given, this is always 1)", alias="page_num"),
     post_id: Annotated[Optional[StrictStr], Field(description="Filter by a specific post ID.")] = Query(None, description="Filter by a specific post ID.", alias="post_id"),
     name: Annotated[Optional[StrictStr], Field(description="Filter by post title (case-insensitive search).")] = Query(None, description="Filter by post title (case-insensitive search).", alias="name"),
     category_slug: Annotated[Optional[StrictStr], Field(description="Filter by the URL-friendly category identifier (e.g., 'road-hazard').")] = Query(None, description="Filter by the URL-friendly category identifier (e.g., &#39;road-hazard&#39;).", alias="category_slug"),
     since: Annotated[Optional[datetime], Field(description="Return posts created after this ISO 8601 timestamp.")] = Query(None, description="Return posts created after this ISO 8601 timestamp.", alias="since"),
-) -> List[Post]:
+) -> PostList:
     """Returns a list of posts. Supports filtering by ID, name, category, or time.  Results are limited to a maximum of 10. """
     if not BasePostsApi.subclasses:
         raise HTTPException(status_code=500, detail="Not implemented")
-    return await BasePostsApi.subclasses[0]().get_posts(post_id, name, category_slug, since)
+    return await BasePostsApi.subclasses[0]().get_posts(page_num, post_id, name, category_slug, since)
